# DashVERSE

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  flake.nix  justfile  pyproject.toml  shell.nix
.github/: pull_request_template.md
ansible/playbooks/: seed_data.yml  sync_everse.yml
ansible/roles/seed_data/tasks/: main.yml
ansible/roles/superset_config/defaults/: main.yml
ansible/roles/sync_everse/tasks/: main.yml
auth-service/: requirements-dev.txt  requirements.txt
auth-service/app/api/: auth.py  dependencies.py  web.py
auth-service/app/core/: database.py  lockout.py  security.py
auth-service/app/schemas/: token.py  user.py
compose/: README.md  docker-compose.yaml
compose/superset/: bootstrap.sh  setup_dashboards.py  superset_config.py
compose/sync/: sync.sh
database/: README.md
database/sql/data/: 003_software.sql  004_assessment_examples.sql
database/sql/schema/: 006_create_views.sql
demo-portal/app/core/: config.py
docs/: Deployment.md  Kubernetes.md  README.dev.md  VM.md
landing/: Dockerfile  requirements.txt
landing/app/: __init__.py  main.py
landing/app/api/: routes.py
landing/app/templates/: base.html  concepts.html  dashboard.html  data.html  home.html
scripts/: import-everse.sh  port-forward.sh  seed-data.sh
scripts/vm/: create-vm.sh  deploy-dashverse.sh  install-port-forward-service.sh  nixos-hypervisor.nix  open-firewall.sh  setup-vm.sh  start.sh  stop.sh  tunnel.sh
terraform/: main.tf
terraform/modules/landing/: main.tf  outputs.tf  variables.tf
(+14 files in other folders)
